--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,11 @@
     "./test",
     "./typechain"   
   ],
-  "exclude": ["node_modules"],
+  "exclude": [
+    "node_modules",
+    "babel.config.js",
+    "metro.config.js",
+    "jest.config.js"
+  ],
   "files": ["./hardhat.config.ts"]
 }
